--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+
+table
+  width: 100%
+
+mat-sidenav-container
+  height: 100%
+
+form
+  width: calc(100% - 46px)
+
+.action-controls
+  display: flex
+  flex-direction: row
+  justify-content: flex-end
