--- a/src/app/page/login/template.html
+++ b/src/app/page/login/template.html
@@ -12,7 +12,7 @@
   </mat-card-content>
   <mat-card-actions>
     <div class="action-controls">
-      <button mat-raised-button color="primary" [disabled]="form.invalid || isProcessing" (click)="save()">Login</button>
+      <button class="submit" mat-raised-button color="primary" [disabled]="form.invalid || isProcessing" (click)="save()">Login</button>
     </div>
   </mat-card-actions>
 </mat-card>
