--- a/src/app/component/app/component.html
+++ b/src/app/component/app/component.html
@@ -16,7 +16,7 @@
           <button mat-button (click)="navigate([''])">Profile</button>
         </mat-list-item>
         <mat-list-item>
-          <button mat-button (click)="logout()">Logout</button>
+          <button mat-button (click)="logout()" class="logout-menu-item">Logout</button>
         </mat-list-item>
       </mat-list>
     </ng-container>
