--- a/src/app/page/login/template.html
+++ b/src/app/page/login/template.html
@@ -6,7 +6,7 @@
         <input matInput type="text" placeholder="Login" formControlName="login">
       </mat-form-field>
       <mat-form-field>
-        <input matInput type="text" placeholder="Password" formControlName="password">
+        <input matInput type="password" placeholder="Password" formControlName="password">
       </mat-form-field>
     </div>
   </mat-card-content>
