Admin back and front have been glued.

--- a/src/app/page/login/template.html
+++ b/src/app/page/login/template.html
@@ -3,7 +3,7 @@
   <mat-card-content>
     <div [formGroup]="form" class="controls-container">
       <mat-form-field>
-        <input matInput type="text" placeholder="Login" formControlName="name">
+        <input matInput type="text" placeholder="Name" formControlName="name">
       </mat-form-field>
       <mat-form-field>
         <input matInput type="password" placeholder="Password" formControlName="password">
